# gitup

./: .clang_complete  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile
cmake/: FindLibgit2.cmake
